--- a/index.html
+++ b/index.html
@@ -1,79 +1,98 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
     <title>Artem CV</title>
-</head>
-<body>
-<table cellspacing="15">
-<tr>
-<td>
-        <img src="avatar.png" width="200" alt="тут моя фотка">
-</td>
-<td>
-        <h1>Артем Артемьев</h1>
-        <p><em> Я основатель одноименного <strong>Youtube канала</strong></em> </p>
-        <p>Я люблю играть в футбол, программировать</p>
-</td>
-</tr>
-</table>
-<hr>
+  </head>
 
-<h2>Мой Telegram </h2>
-<ul type=square">
-    <li><a href="https://t.me/raskatalo"target="blank">Telegram</a></li>
-</ul>
+  <body>
+    <table cellspacing="15">
+      <tr>
+        <td>
+          <img src="avatar.png" width="200" alt="тут моя фотка" />
+        </td>
 
-<hr>
+        <td>
+          <h1>Артем Артемьев</h1>
+          <p>
+            <em>Я основатель одноименного <strong>Youtube канала</strong></em>
+          </p>
+          <p>Я люблю играть в футбол, программировать</p>
+        </td>
+      </tr>
+    </table>
 
-<h2>Мои хобби</h2>
-<ol>
-<li>Блоггер</li>
-<li>Быстрая езда на машинах</li>
-<Li>Спорт : ММА</Li>
-<Li>Путтешествия</Li>
-</ol>
-<hr>
-<h2>Опыт работы</h2>
-<table border="">
-<tr>
-<tr> Компания</tr>
-<tr> Должность</tr>
-<tr> Год</tr>
-<tr> 
-</tr>
-    <td> EPAM</td>
-    <td>Software Engineer</td>
-    <td>2020-2021</td>
-</tr>
-</table>
+    <hr />
 
-<hr>
-<h2>Youtube Курсы</h2>
-<a href="youtube.html"target="blank">Посмотреть список</a>
-</body>
+    <h2>Мой Telegram</h2>
+
+    <ul type="square">
+      <li><a href="https://t.me/raskatalo" target="_blank">Telegram</a></li>
+    </ul>
+
+    <hr />
+
+    <h2>Мои хобби</h2>
+
+    <ol>
+      <li>Блогер</li>
+      <li>Быстрая езда на машинах</li>
+      <li>Спорт: ММА</li>
+      <li>Путешествия</li>
+    </ol>
+
+    <hr />
+
+    <h2>Опыт работы</h2>
+
+    <table cellspacing="15">
+      <thead>
+        <tr>
+          <td>Компания</td>
+          <td>Должность</td>
+          <td>Год</td>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr>
+          <td>EPAM</td>
+          <td>Software Engineer</td>
+          <td>2020-2021</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <hr />
+
+    <h2>Youtube Курсы</h2>
+    <a href="youtube.html" target="blank">Посмотреть список</a>
+
+    <br />
+    <hr />
+
+    <h2>Связаться со мной</h2>
+
+    <form action="/">
+      <label for="name">Ваш имя:</label>
+      <input type="text" id="name" placeholder="Введите ваш имя..." />
+
+      <br />
+
+      <label for="email">Ваш Email:</label>
+      <input type="text" id="email" placeholder="Введите email..." />
+
+      <br />
+
+      <label for="message">Ваше сообщение:</label>
+
+      <br />
+
+      <textarea id="message" rows="2" cols="15"></textarea>
+
+      <br />
+
+      <input type="submit" value="Связаться!" />
+    </form>
+  </body>
 </html>
-<br>
-<hr>
-
-<h2>Связаться со мной</h2>
-
-<form>
-    <label for="name">Ваш имя:</label>
-<input type="text" id="name"
-placeholder="Введите ваш имя...">
-
-<br>
-
-<label for="name">Ваш Email:</label>
-<input type="text" id="email"
-placeholder="Введите email...">
-<br>
-
-<label for="text">Ваше сообщение:</label>
-<br>
-
-<textarea name="" id="" cols="50" rows="5"></textarea>
-
-<input type="submit">
-</form>
